@@ -2,6 +2,10 @@ Trunk:
 - correct misleading namespace in PrepareToGetRequestStatus
 - correct a timeout issue related to exponential backoff system in put/get
 - improve reliability of the exponential backoff wait system
+- big big code cleaning
+- re-factory of the context system with backward compatibility
+- fix the srm timeout issue
+- fix the srm put done issue for long transfer
 
 Fri Jul 20 2012 Adrien Devresse <adevress at cern.ch> - 1.13.0-0
  - Synchronise with EMI 2 Update 13
